RK sample template/RK sample with LB V2/Template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "VM1adminUsername": {
           "type": "string",
           "metadata": {
                "description": "VM1 Windows User Name"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "VM1 User Password"
            }
        },
        "VM2adminUsername": {
           "type": "string",
           "metadata": {
                "description": "VM2 Windows User Name"
            }
        },
        "VM1NSG": {
           "type": "string",
           "metadata": {
                "description": "VM1 NSG Name"
            }
        },
        "VM2NSG": {
           "type": "string",
           "metadata": {
                "description": "VM2 NSG Name"
            }
        },
        "LoadBalancer PIP": {
           "type": "string",
           "metadata": {
                "description": "Load Balancer PublicIP Address"
            }
        },
        "Vnet1": {
           "type": "string",
           "metadata": {
                "description": "Vnet Name"
            }
        },
        "LoadBalancer": {
           "type": "string",
           "metadata": {
                "description": "LoadBalancer Name"
            }
        },
        "availabilitySet": {
           "type": "string",
           "metadata": {
                "description": "Availability set Name"
            }
        },
        "windowsVM1": {
           "type": "string",
           "metadata": {
                "description": "Windows VM1 NAme"
            }
        },
        "windowsVM2": {
           "type": "string",
           "metadata": {
                "description": "Windows VM2 Name"
            }
        },
        "NIC1": {
           "type": "string",
           "metadata": {
                "description": "NIC 1 Name"
            }
        },
        "NIC2": {
           "type": "string",
           "metadata": {
                "description": "NIC 2 Name"
            }
        }

    },
    "variables": {
        "Vnet1": {
            "addressSpacePrefix": "10.0.0.0/24",
            "SubnetName": "Subnet1",
            "SubnetPrefix": "10.0.0.0/24"
        },
        "LBFrontEnd": "loadBalancerFrontEnd1",
        
        "Probes": "tcpProbe1",
        "InboundNAT": "InBoundNATRule",
        "LBStorage": "[concat('storage', uniqueString(resourceGroup().id) )]",
        "loadbalancerbackendpool": "loadbalancerbackendpool"

    },
    "resources": [
        
       {
           "name": "[parameters('VM1NSG')]",
           "type": "Microsoft.Network/networkSecurityGroups",
           "apiVersion": "2018-08-01",
           "location": "[resourceGroup().location]",
           "properties": {
               "securityRules": [
                   {
                       "name": "nsgRule1",
                       "properties": {
                           "description": "description",
                           "protocol": "Tcp",
                           "sourcePortRange": "*",
                           "destinationPortRange": "3389",
                           "sourceAddressPrefix": "*",
                           "destinationAddressPrefix": "*",
                           "access": "Allow",
                           "priority": 100,
                           "direction": "Inbound"
                       }
                   }
               ]
           }
       },

       {
           "name": "[parameters('VM2NSG')]",
           "type": "Microsoft.Network/networkSecurityGroups",
           "apiVersion": "2018-08-01",
           "location": "[resourceGroup().location]",
           "properties": {
               "securityRules": [
                   {
                       "name": "nsgRule2",
                       "properties": {
                           "description": "description",
                           "protocol": "Tcp",
                           "sourcePortRange": "*",
                           "destinationPortRange": "*",
                           "sourceAddressPrefix": "*",
                           "destinationAddressPrefix": "*",
                           "access": "Allow",
                           "priority": 100,
                           "direction": "Inbound"
                       }
                   }
               ]
           }
       },

               {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('VM1NSG'), '/nsgRule1')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('VM1NSG'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2020-05-01",
            "name": "[concat(parameters('VM2NSG'), '/nsgRule2')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('VM2NSG'))]"
            ],
            "properties": {
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },

       {
           "name": "[parameters('LoadBalancer PIP')]",
           "type": "Microsoft.Network/publicIPAddresses",
           "apiVersion": "2019-11-01",
           "location": "[resourceGroup().location]",
           "tags": {
               "displayName": "publicIPAddress1"
           },
           "properties": {
               "publicIPAllocationMethod": "Dynamic",
               "dnsSettings": {
                   "domainNameLabel": "dnsname1"
               }
           }
       },

       {
           "name": "[parameters('Vnet1')]",
           "type": "Microsoft.Network/virtualNetworks",
           "apiVersion": "2019-11-01",
           "location": "[resourceGroup().location]",
           "tags": {
               "displayName": "virtualNetwork1"
           },
           "properties": {
               "addressSpace": {
                   "addressPrefixes": [
                       "10.0.0.0/24"
                   ]
               },
               "subnets": [
                   {
                       "name": "[variables('Vnet1').SubnetName]",
                       "properties": {
                           "addressPrefix": "10.0.0.0/24"
                       }
                   }
               ]
           }
       },

       {
        "name": "[variables('loadbalancerbackendpool')]",
        "type": "Microsoft.Network/loadBalancers/backendAddressPools",
        "apiVersion": "2020-05-01",
        "dependsOn": [
           "[resourceId('Microsoft.Network/loadBalancers',parameters('LoadBalancer'))]" 
        ],
        "properties": {}
       },

        {
            "name": "[parameters('availabilitySet')]",
            "type": "Microsoft.Compute/availabilitySets",
            "apiVersion": "2019-03-01",
            "location": "[resourceGroup().location]",

            "sku":{
                "Name": "aligned"
            },
            "tags": {
                "displayName": "availabilitySet1"
            },
            "properties": {
                "platformUpdateDomainCount": 5,
                "platformFaultDomainCount": 2,
                "virtualMachines":[
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('windowsVM1'))]"
                    },
                    {
                        "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('windowsVM2'))]"
                    }
                ]
            }
        },

        {
            "name": "[parameters('NIC1')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "networkInterface1"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('Vnet1'))]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools',parameters('LoadBalancer'),variables('loadbalancerbackendpool'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('VM1NSG'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('Vnet1'), variables('Vnet1').SubnetName)]"
                            }
                        },
                        "loadBalancerBackendAddressPools": [
                            {
                               "Id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools',parameters('LoadBalancer'),variables('loadbalancerbackendpool'))]" 
                            }
                        ],
                        "networkSecurityGroup": {
                                "Id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('VM1NSG'))]"
                            }
                    }
                ]
            }
        },

        {
            "name": "[parameters('NIC2')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[parameters('NIC2')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('Vnet1'))]",
                "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools',parameters('LoadBalancer'),variables('loadbalancerbackendpool'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('VM2NSG'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig2",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('Vnet1'), variables('Vnet1').SubnetName)]"
                            },
                            "loadBalancerBackendAddressPools":[ {
                                 "Id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools',parameters('LoadBalancer'),variables('loadbalancerbackendpool'))]"
                            }
                            ],
                            "networkSecurityGroup": {
                                "Id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('VM2NSG'))]"
                            }
                        }
                    }
                ]
            }
        },

        {
            "name": "[variables('LBStorage')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines',parameters('windowsVM1'))]"
            ],
            "tags": {
                "displayName": "storageaccount1"
            },
            "properties": {
                "accountType": "Standard_LRS"
            }
        },

        {
            "name": "[parameters('LoadBalancer')]",
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
                  "sku": {
                        "name": "Standard"
                         },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('LoadBalancer PIP'))]"

            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[variables('LBFrontEnd')]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('LoadBalancer PIP'))]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('loadbalancerbackendpool')]"
                    }
                ],
                "inboundNatRules": [
                    {
                        "name": "[variables('InboundNAT')]",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', parameters('LoadBalancer'), variables('LBFrontEnd'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 50001,
                            "backendPort": 3389,
                            "enableFloatingIP": false
                        }
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "LBRule1",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', parameters('LoadBalancer'), variables('LBFrontEnd'))]"
                            },
                            "backendAddressPool": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', parameters('LoadBalancer'), variables('loadbalancerbackendpool'))]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[resourceId('Microsoft.Network/loadBalancers/probes', parameters('LoadBalancer'), variables('Probes'))]"
                            }
                        }
                    }
                ],
                "probes": [
                    {
                        "name": "[variables('Probes')]",
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 5,
                            "numberOfProbes": 2
                        }
                    }
                ]
            }
        },

        {
            "name": "[parameters('windowsVM1')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('NIC1'))]"
                
            ],
            "tags": {
                "displayName": "windowsVM1"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',parameters('availabilitySet'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "[parameters('windowsVM1')]",
                    "adminUsername": "[parameters('VM1adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "windowsVM1OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                    
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('NIC1'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true
                        
                    }
                }
            }
        },

        
        {
            "name": "[parameters('windowsVM2')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('LBStorage'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('NIC2'))]"

            ],
            "tags": {
                "displayName": "windowsVM1"
            },
            "properties": {
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',parameters('availabilitySet'))]"
                },
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "[parameters('windowsVM2')]",
                    "adminUsername": "[parameters('VM2adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "windowsVM12OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('NIC2'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true  
                    }
                }
            }
        }

       ],
    "outputs": {}
}
